[package]
name = "my_hangman"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "A simple TUI hangman game built in rust"


[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
rand = "0.9.0"
random_word = { version = "0.5.0", features = ["en"] }
ratatui = "0.28.0"
tui-input = "0.12.0"
